--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,6 @@ version = "0.1.0"
 description = "Bindings for Alazar digitizer boards"
 authors = [{ name = "T. D. Weber", email = "tweber@mit.edu" }]
 dependencies = ["numpy>=1.21.0"]
+
+[tool.setuptools.package-data]
+atsbindings = ["board_specific_info.toml"]
