--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ name = "atsbindings"
 version = "0.1.0"
 description = "Bindings for Alazar digitizer boards"
 authors = [{ name = "T. D. Weber", email = "tweber@mit.edu" }]
+license = {text = "MIT"}
 dependencies = ["numpy>=1.21.0"]
 
 [tool.setuptools.package-data]
